<resources>
    <string name="app_name">AwesomeNotes</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="notes_hint">Notes</string>
    <string name="settings_hint">Settings</string>
    <string name="log_out_hint">Log Out</string>
    <string name="note_removed">Note removed</string>
    <string name="undo">UNDO</string>
    <string name="cant_delete_note">Can\'t delete note</string>
    <string name="login_hint">Login</string>
    <string name="email_hint">email@gmail.com</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_hint">Sign In</string>
    <string name="sign_up_hint">Sign Up</string>
    <string name="dark_theme">Dark Theme</string>
</resources>
