<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:padding="@dimen/normal"
              android:orientation="vertical">


    <EditText
        android:id="@+id/first_name_edit_text"
        android:hint="@string/first_name_hint"
        android:text="@string/first_name_hint"
        style="@style/Login.EditText"/>

    <EditText
        android:id="@+id/last_name_edit_text"
        android:hint="@string/last_name_hint"
        android:text="@string/last_name_hint"
        style="@style/Login.EditText"/>

    <EditText
        android:id="@+id/email_edit_text"
        android:hint="@string/email_hint"
        android:text="@string/email_hint"
        style="@style/Login.EditText"/>

    <EditText
        android:id="@+id/pass_edit_text"
        android:hint="@string/password_hint"
        android:text="@string/password_hint"
        android:inputType="textPassword"
        style="@style/Login.EditText"
    />

    <EditText
        android:id="@+id/pass_confirm_edit_text"
        android:hint="@string/password_hint"
        android:text="@string/password_hint"
        android:inputType="textPassword"
        style="@style/Login.EditText"/>

    <Button
        android:id="@+id/sign_up_button"
        android:text="@string/sign_up_hint"
        android:layout_marginTop="@dimen/normal"
        style="@style/Login.Button"/>

</LinearLayout>