<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:padding="@dimen/normal"
              android:orientation="vertical">

    <ImageView
        android:layout_marginTop="@dimen/normal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/notes_icon"/>

    <EditText
        android:id="@+id/login_edit_text"
        android:layout_marginTop="@dimen/middle"
        android:hint="@string/login_hint"
        style="@style/Login.EditText"/>

    <EditText
        android:id="@+id/pass_edit_text"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        style="@style/Login.EditText"
    />

    <Button
        android:id="@+id/sign_in_button"
        android:text="@string/sign_in_hint"
        android:layout_marginTop="@dimen/normal"
        style="@style/Login.Button"/>

    <Button
        android:id="@+id/sign_up_button"
        android:text="@string/sign_up_hint"
        style="@style/Login.Button"/>

</LinearLayout>